# table-agent

./: .gitignore  LICENSE  README.md  hello.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
table_agent/: __init__.py  agent.py  docker_executor.py  extract.py  graph.py  tools.py  types.py  utils.py
tests/: test_extract.py
