[project]
name = "table-agent"
version = "0.1.0"
description = "An AI agent that can efficiently parse tables (csv, parquet, ...) into a structured format"
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincentmin17@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "langchain-core>=0.3.31",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.66",
    "pandas>=2.2.3",
]

[tool.hatch.build.targets.wheel]
    packages = ["table_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
