[project]
name = "table-agent"
version = "0.1.0"
description = "An AI agent that can efficiently parse tables (csv, parquet, ...) into a structured format"
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincentmin17@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.31",
    "langgraph>=0.2.66",
    "pandas>=2.2.3",
    "testcontainers>=4.9.1",
]

[tool.hatch.build.targets.wheel]
    packages = ["table_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.3",
]
datasets = [
    "datasets>=3.2.0",
]
ollama = [
    "langchain-ollama>=0.2.2",
]
openai = [
    "langchain-openai>=0.3.1",
]
all = [
    "ruff>=0.9.3",
    "datasets>=3.2.0",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.1",
]
